--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
+
 
     <title>React App</title>
   </head>
